Fix overflow issue:

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,3 @@
   color: white;
 }
 
-h1 {
-  overflow: hidden;
-}
