--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -17,6 +17,9 @@
     margin-left: 20px;
     margin-top: 5vh;
 }
+h1 {
+  overflow: hidden;
+}
 
   .text-highlight {
     color: rgb(248, 196, 111) !important;
