--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,4 +1,5 @@
 .projects-title {
     text-align: center;
     margin: 20px;
+    overflow: hidden;
 }
