--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -4,7 +4,9 @@
     justify-content: center;
     flex-direction: column;
 }
-
+h1{
+    overflow: hidden;
+}
 .resume{
     height: 1000px;
     margin-bottom: 5vh;
